# Segs

./: CMakeLists.txt
.github/workflows/: SegsCI.yaml  SegsNightlyRelease.yaml
CMakeScripts/: LocateQt5.cmake  Macdeployqt.cmake  Windeployqt.cmake
Common/AuthProtocol/: CMakeLists.txt
Common/AuthProtocol/UnitTests/: CMakeLists.txt
Common/CRUDP_Protocol/: CMakeLists.txt
Common/GameData/: CMakeLists.txt  Character.cpp  Contact.h  DataStorage.cpp  NpcStore.cpp  NpcStore.h  Store.cpp
Common/Runtime/: CMakeLists.txt  Prefab.cpp  SceneGraph.cpp  Sequencer.cpp  Texture.cpp
Common/Servers/: CMakeLists.txt
Components/: CMakeLists.txt  PasswordHasher.cpp
Servers/AuthDatabase/: CMakeLists.txt
Servers/AuthServer/: CMakeLists.txt
Servers/GameDatabase/: CMakeLists.txt
Servers/GameServer/: CMakeLists.txt
Servers/MapServer/: CMakeLists.txt  DataHelpers.cpp  MapInstance.cpp  MapInstance.h  MapServer.cpp  NpcGenerator.cpp
Utilities/AuthExerciser/: CMakeLists.txt
Utilities/BinConverter/: CMakeLists.txt  binConverter.cpp
Utilities/CharacterViewer/: CMakeLists.txt
Utilities/EditorComponents/: CMakeLists.txt
Utilities/MapViewer/: CMakeLists.txt
Utilities/RPCTestClient/: CMakeLists.txt
Utilities/SEGSAdmin/: CMakeLists.txt  Helpers.cpp  TextEdit.cpp
Utilities/ServerMonitor/: CMakeLists.txt
Utilities/TextureConverter/: CMakeLists.txt
Utilities/dbtool/: CMakeLists.txt
Utilities/event_gen/: CMakeLists.txt  main.cpp
Utilities/piggtool/: CMakeLists.txt  main.cpp
Utilities/slav/: CMakeLists.txt  ProjectManifest.cpp  UpdaterDlg.h
(+27 files in other folders)
